fix: main gap and close tag main

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -9,5 +9,5 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 100px;
+  gap: 2%;
 }
